<resources>
    <string name="app_name" translatable="false">GREEN WORKS</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_close">Close Navigation</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="rewards">Rewards</string>
    <string name="greeting">Hello</string>
    <string name="default_name"></string>
    <string name="profile_image">Profile Image</string>
    <string name="default_points">100 points</string>
    <string name="real_points">points</string>
    <string name="sorting_guide">Sorting Guide</string>
    <string name="location">Location</string>
    <string name="scan">Scan</string>
    <string name="calendar">Calendar</string>
    <string name="history">History</string>
    <string name="scan_button">Scan Button</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="yearly">Yearly</string>
    <string name="progress">Progress</string>
    <string name="glass">Glass</string>
    <string name="plastic">Plastic</string>
    <string name="cardboard">Cardboard</string>
    <string name="material">Material</string>
    <string name="water_bottle">Water Bottle</string>
    <string name="materials">Materials</string>
    <string name="_20">20</string>
    <string name="_10">10</string>
    <string name="_7">7</string>
    <string name="pipe_symbol">|</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="points">points</string>
    <string name="_100">0</string>
    <string name="map">Map</string>
    <string name="close_button">Close Button</string>
    <string name="logo">Logo</string>
    <string name="last_scanned">Last Scanned</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="contact_us">Contact Us</string>
    <string name="version">"Version "</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_message">Enter the email you used to sign up to reset your password.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>

    <string name="agree_with">Agree with </string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="already_have_an_account_login">Already have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_account">Create an Account</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="terms_of_service_filler">
        <b>1. Terms</b> \n\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. \n \n
        <b>2. Why do we use it?</b> \n\nIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).\n\n
        <b>3. Where does it come from?</b>\n\nContrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.\n\nThe standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.\n
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="contact">Contact</string>
    <string name="get_in_touch">Get in Touch</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="made_with_by_valencia_ctsd">Made with ❤️ by Valencia College CTSD</string>
    <string name="registration">Registration</string>
    <string name="profile">Profile</string>
    <string name="copyright">©</string>
    <string name="year">2024</string>
    <string name="city_of_orlando">City of Orlando</string>
    <string name="most_frequent_searches">Most Frequent</string>
    <string name="search_items">Search for items</string>
    <string name="no_schedule">No schedule</string>
    <string name="default_collection_time">6:00 AM</string>
    <string name="item_information">Item Information</string>
    <string name="exit">Exit</string>
    <string name="dispose">Dispose</string>
    <string name="badge_title">Badge Title</string>
    <string name="recycling_center_name">Recycling Center Name</string>
    <string name="location_icon">Location Icon</string>
    <string name="hours_of_operation">Hours of Operation</string>
    <string name="clock_icon">Clock Icon</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="no_items_found">No items found.</string>
    <string name="item_image">item image</string>
    <string name="item_name">Item Name</string>

    <string name="account_success">Account created successfully</string>
    <string name="login_failure">Login failed</string>
    <string name="empty_field">This field cannot be empty</string>
    <string name="first_name_error">Invalid first name</string>
    <string name="last_name_error">Invalid last name</string>
    <string name="address_error">Invalid address</string>
    <string name="weak_password">Password is too weak</string>
    <string name="match_password">Passwords do not match</string>
    <string name="email_error">Invalid email address</string>
    <string name="phone_error">Invalid phone number</string>
    <string name="account_exists">Account already exists</string>
    <string name="terms_agree">You must agree to the terms and conditions</string>
    <string name="registration_errors">There were errors in your registration</string>
    <string name="feature_not_available">This feature is not available</string>
    <string name="about">About</string>
    <string name="theme">Theme</string>
    <string name="toggle_dark_mode">Toggle Dark Mode</string>
    <string name="notifications">Notifications</string>

    <string name="enable_notifications">Enable Notifications</string>
    <string name="language">Language</string>
    <string name="type_barcode_button">type barcode button</string>
    <string name="guess_item">Guess Item</string>
    <string name="flash_on_and_off_button">Flash on and off button</string>

    <string name="guest_login_registration_link">Login / Sign-up</string>
    <string name="popular_searches">Popular Searches</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="q4">Q4</string>
    <string name="q3">Q3</string>
    <string name="q2">Q2</string>
    <string name="q1">Q1</string>
    <string name="search_history">Search History</string>
    <string name="next_collection">Next Collection</string>
    <string name="schedule">Schedule</string>
    <string name="unit">Unit</string>
    <string name="done">Done</string>
    <string name="open_button">Open Button</string>
</resources>