<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:title="">

        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_terms"
                    android:icon="@drawable/baseline_handshake_24"
                    android:title="@string/terms_of_service"/>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/baseline_settings_24"
                    android:title="@string/settings"/>
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/baseline_contact_support_24"
                    android:title="@string/contact_us"/>

            </group>
        </menu>

    </item>

    <item
        android:title="">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="@string/logout"/>

            </group>
        </menu>

    </item>

</menu>
