<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ItemBackgroundColor"
    android:layout_width="110dp"
    android:layout_height="130dp"
    app:cardElevation="20dp"
    app:cardCornerRadius="10dp"
    android:backgroundTint="@color/white"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:contentDescription="@string/material"
            android:src="@drawable/water_bottle" />


        <TextView
            android:id="@+id/itemNameHolderDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plastic"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/itemPriceHolderDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_points"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.cardview.widget.CardView>
