<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/dialog_shape">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:contentDescription="Holder"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_round_remove_24"
        tools:ignore="ImageContrastCheck" />
    <TextView
        android:id="@+id/recyclingCenterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/recycling_center_name"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="12dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:gravity="center_vertical">

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/baseline_location_pin_24"
                   android:layout_marginStart="10dp"
                   android:layout_marginTop="10dp"
                   android:layout_marginBottom="10dp"
                   android:contentDescription="@string/location_icon"/>

               <TextView
                   android:id="@+id/recyclingCenterAddress"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/address"
                   android:textSize="16sp"
                   android:textColor="@color/black"
                   android:layout_marginStart="10dp" />

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:gravity="center_vertical">

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/baseline_access_time_filled_24"
                   android:layout_marginStart="10dp"
                   android:layout_marginTop="10dp"
                   android:layout_marginBottom="10dp"
                   android:contentDescription="@string/clock_icon"/>

               <TextView
                   android:id="@+id/recyclingCenterHours"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/hours_of_operation"
                   android:textSize="16sp"
                   android:textColor="@color/black"
                   android:layout_marginStart="10dp"
                   android:layout_marginTop="10dp"
                   android:layout_marginBottom="10dp"/>

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:gravity="center_vertical">

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/baseline_phone_24"
                   android:layout_marginStart="10dp"
                   android:layout_marginTop="10dp"
                   android:layout_marginBottom="10dp"
                   android:contentDescription="@string/phone_icon"/>

               <TextView
                   android:id="@+id/recyclingCenterPhone"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/phone_number"
                   android:textSize="16sp"
                   android:textColor="@color/black"
                   android:layout_marginStart="10dp"
                   android:layout_marginTop="10dp"
                   android:layout_marginBottom="10dp"/>

           </LinearLayout>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
                android:text="If you live in an apartment complex or condo community and don't have access to recycling, bring your materials to one of our convenient drop-off locations."
                android:textColor="@color/gray"
               android:textSize="11sp"
               android:textAlignment="center"
               android:layout_marginStart="10dp"
               android:layout_marginEnd="10dp"
               android:layout_marginTop="20dp"
               android:layout_marginBottom="5dp"/>

       </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>